# parschema

./: README.md  pyproject.toml
examples/: vesselseg_params.yaml  vesselseg_schema.yaml  vesselseg_script.py
parschema/: __init__.py  actions.py  checks.py  cli_help.py  cli_parse.py  decorators.py  yaml_validate.py
parseman/: actions.py  checks.py  cli_parse.py  exceptions.py  yaml_validate.py
